--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -92,6 +92,12 @@
         <com.android.settings.RegulatoryInfoPreference android:key="regulatory_info"
                 android:title="@string/regulatory_information" />
 
+        <!-- Device manufacturer -->
+        <Preference android:key="device_manufacturer"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/device_manufacturer"
+                android:summary="@string/device_info_default"/>
+
         <!-- Device hardware model -->
         <Preference android:key="device_model" 
                 style="?android:preferenceInformationStyle"
