Add a setting to enable battery level polling
Add an entry in Battery to enable battery level polling.
This enables user to use battery level polling to workaround
broken BIOS.

For: AIA-432
Change-Id: Ia1d7e3605285df2c86e74674d95995f983a5680d
Original-Change-Id: I425be6365071255a7f579741d54229deaf98d915
Original-Depends-Change-Id: Ibc0b69b51b8677372bb3fd14d9749fcb1a54de65
Signed-off-by: Daniel Leung <daniel.leung@intel.com>

--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -22,4 +22,15 @@
         android:key="battery_status"
         android:persistent="false"
     />
+
+    <PreferenceCategory android:key="battery_options"
+            android:title="@string/battery_options">
+
+        <CheckBoxPreference
+            android:key="poll_battery_level"
+            android:title="@string/poll_battery_level"
+            android:summary="@string/poll_battery_level_summary"/>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
