display: Expose user_rotation setting
USER_ROTATION exists in settings.system but was not exposed. This exposes
it such that when the user selects a value, auto-rotate will be disabled
and the new rotation will go into effect.

Tested to ensure proper interactions with apps which force rotation.

Change-Id: I13d887f365d60582c39ee79c89aa6da5b89fda08
Signed-off-by: Matt Gumbel <matthew.k.gumbel@intel.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -33,6 +33,14 @@
             android:title="@string/accelerometer_title"/>
 
         <ListPreference
+                android:key="user_rotation"
+                android:title="@string/user_rotation_title"
+                android:summary="@string/user_rotation_summary"
+                android:persistent="true"
+                android:entries="@array/entries_user_rotation"
+                android:entryValues="@array/values_user_rotation" />
+
+        <ListPreference
                 android:key="screen_timeout"
                 android:title="@string/screen_timeout"
                 android:summary="@string/screen_timeout_summary"
