--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -159,6 +159,16 @@
         <item>1.30</item>
     </string-array>
     
+    <string-array name="entries_user_rotation">
+        <item>Landscape</item>
+        <item>Portrait</item>
+    </string-array>
+
+    <string-array name="values_user_rotation">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- TTS settings -->
 
     <!-- Default speech rate choices -->
