Add Ethernet settings panel
Depends-Change-Id: I049320d81fe510245c6d92f48eaf25ea7d7b908f
Depends-change-Id: Ie1d2100e6324052057c267997d050b60761f009a
Depends-change-Id: I1766488371186391929b8dc6605cebf215c0baec
Depends-Change-Id: Id7ef6fcfafd36f1c288fa14f587a0d42d1996247
Depends-Change-Id: I39b79940e0495f915f602a16d99e1848bd3f2015
Author: Matt Gumbel <matthew.k.gumbel@linux.intel.com>
Author: Anton Cherkashyn <antonx.t.cherkashyn@intel.com>
Signed-off by: Anton Cherkashyn <antonx.t.cherkashyn@intel.com>
Change-Id: I09b78c87281495fda9564d3dd753c851bd8d89e4
Signed-off-by: Matt Gumbel <matthew.k.gumbel@intel.com>

--- a/res/layout/ethernet_dialog_row.xml
+++ b/res/layout/ethernet_dialog_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2010 The Android Open Source Project
+<!-- Copyright (C) 2012 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,12 +14,14 @@
      limitations under the License.
 -->
 
-<resources>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              style="@style/ethernet_item" >
+    <TextView
+            style="@style/ethernet_item_label"
+            android:id="@+id/name" />
 
-    <style name="Theme.WifiDialog" parent="@*android:style/Theme.Holo.Dialog.Alert">
-        <item name="android:windowSoftInputMode">adjustResize</item>
-    </style>
-    <style name="Theme.EthernetDialog" parent="@*android:style/Theme.Holo.Dialog.Alert">
-        <item name="android:windowSoftInputMode">adjustResize</item>
-    </style>
-</resources>
+    <TextView
+            android:id="@+id/value"
+            style="@style/ethernet_item_content"
+            android:textStyle="bold" />
+</LinearLayout>
