--- a/res/drawable/ethernet_status.xml
+++ b/res/drawable/ethernet_status.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2010 The Android Open Source Project
+<!-- Copyright (C) 2012 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,12 +14,9 @@
      limitations under the License.
 -->
 
-<resources>
-
-    <style name="Theme.WifiDialog" parent="@*android:style/Theme.Holo.Dialog.Alert">
-        <item name="android:windowSoftInputMode">adjustResize</item>
-    </style>
-    <style name="Theme.EthernetDialog" parent="@*android:style/Theme.Holo.Dialog.Alert">
-        <item name="android:windowSoftInputMode">adjustResize</item>
-    </style>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    <item settings:ethernet_state="0" android:drawable="@drawable/ic_ethernet_disabled"/>
+    <item settings:ethernet_state="1" android:drawable="@drawable/ic_ethernet_transitional"/>
+    <item settings:ethernet_state="2" android:drawable="@drawable/ic_ethernet_enabled"/>
+</selector>
