--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -162,11 +162,15 @@
     <string-array name="entries_user_rotation">
         <item>Landscape</item>
         <item>Portrait</item>
+        <item>Inverted Landscape</item>
+        <item>Inverted Portrait</item>
     </string-array>
 
     <string-array name="values_user_rotation">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 
     <!-- TTS settings -->
